# homework

./: .gitignore  CMakeLists.txt  README.md  build.bat
data/: menu.csv
src/: Menu.cpp  Menu.hpp  MenuItem.hpp  Order.cpp  Order.hpp  UI.cpp  UI.hpp  main.cpp
